--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Docker
 data
+
+# Keys
+
+private_key-base64.txt
+public_key-base64.txt
+private_key.pem
+public_key.pem
